added context query param to cow api requests
need to extract name of parent and nothing else, unless authenticated
