# src/main/resources/swagger/api.yml
@@ -58,6 +58,16 @@ paths:
             type: array
             items:
               type: string
+        - name: context
+          in: query
+          description: Context the data will be used e.g. display as parent
+          required: false
+          schema:
+            type: string
+            enum:
+              - DETAIL
+              - LIST
+              - PARENT
         - name: linageId.equals
           in: query
           schema:
@@ -178,6 +188,16 @@ paths:
           schema:
             type: integer
             format: int64
+        - name: context
+          in: query
+          description: Context the data will be used e.g. display as parent
+          required: false
+          schema:
+            type: string
+            enum:
+              - DETAIL
+              - LIST
+              - PARENT
       responses:
         '200':
           description: OK
@@ -262,7 +282,7 @@ paths:
           description: OK
           content:
             application/json:
-              schema:                
+              schema:
                 $ref: '#/components/schemas/LinageVO'
         '404':
           description: Not Found
@@ -270,7 +290,7 @@ paths:
         '501':
           description: Not Implemented
           content: {}
-      deprecated: false  
+      deprecated: false
   '/api/public/cows/{earTagId}/pictures':
     get:
       tags:
@@ -355,7 +375,7 @@ paths:
           description: Name of photo
           required: true
           schema:
-            type: string        
+            type: string
       responses:
         '200':
           description: OK
@@ -743,19 +763,19 @@ components:
           enum:
             - ROLE_ADMIN
             - ROLE_USER
-            - ROLE_ANONYMOUS    
+            - ROLE_ANONYMOUS
     PictureVO:
       title: PictureVO
       type: object
-      properties:        
+      properties:
         id:
           type: integer
-          format: int64                                       
+          format: int64
         caption:
           type: string
         taken:
           type: string
-          format: date-time        
+          format: date-time
         visibility:
           type: string
           enum:
@@ -769,11 +789,11 @@ components:
     PictureSourceVO:
       title: PictureSourceVO
       type: object
-      properties:        
+      properties:
         name:
           type: string
         url:
-          type: string            
+          type: string
         contentType:
           type: string
         width:
@@ -781,7 +801,7 @@ components:
           format: int32
         height:
           type: integer
-          format: int32                
+          format: int32
     BlupVO:
       title: BlupVO
       type: object
